force-app/main/default/objects/Segmentation__mdt/Segmentation__mdt.object-meta.xml
<CustomObject>
    <label>Segmentation</label>
    <pluralLabel>Segmentations</pluralLabel>
</CustomObject>