force-app/main/default/objects/Segmentation__mdt/fields/Maximum_Employees__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Employees__c</fullName>
    <label>Maximum Employees</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>