force-app/main/default/objects/Segmentation__mdt/fields/Minimum_Employees__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Employees__c</fullName>
    <label>Minimum Employees</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>