force-app/main/default/objects/Segmentation__mdt/fields/Segment_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Segment_Assigned__c</fullName>
    <label>Segment Assigned</label>
    <length>20</length>
    <type>Text</type>
</CustomField>